src/test/vm/fail_86pinit.php.exp
HipHop Fatal error: Class undefined: Y in src/test/vm/fail_86pinit.php on line 5
array(6) {
  [0]=>
  int(16777217)
  [1]=>
  string() "Class undefined: Y"
  [2]=>
  string() "src/test/vm/fail_86pinit.php"
  [3]=>
  int(5)
  [4]=>
  string() ""
  [5]=>
  array(2) {
    [0]=>
    array(2) {
      ["file"]=>
      string() "src/test/vm/fail_86pinit.php"
      ["line"]=>
      int(5)
    }
    [1]=>
    array(4) {
      ["file"]=>
      string() "src/test/vm/fail_86pinit.php"
      ["line"]=>
      int(10)
      ["function"]=>
      string() "test"
      ["args"]=>
      array(0) {
      }
    }
  }
}
