src/test/vm/fail_86pinit.php.filter
#!/bin/bash
sed -e 's%/.*src%src%g' -e 's%string([0-9]\+)%string()%'
